2004-06-30 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: small fix for MSVC compilation

2004-06-28 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/misc.h, cli/cmd_symbol.cc, src/symbol.cc:
	Removed 'NUMBER' and 'FLOATING_NUMBER' types from the CLI parser. Now
	all numbers are represented by expressions. All commands that used to
	numbers have been converted over to use expressions.
	
2004-06-28 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_module.cc, src/modules.h, src/modules.cc, gui/gui_breadboard.cc:
	Module positioning now works again.

2004-06-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc: From Ralph, the breadboard was not
	using module pixmaps.
	* cli/cmd_module.cc, cli/cmd_module.h, cli/command.cc,
	cli/parse.yy: cli module command now supports expressions.

2004-06-27 Borut Razem <borut.razem@siol.net>
	* gpsim.sln: set project dependency - modules depends on gpsim
	* gpsim/gpsim.vcproj: corrected Ignore Specific Library settings
	* doc/gpsimWin32.html: added to CVS

2004-06-24 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, cli/cmd_break.h, cli/cmd_log.cc,
	cli/cmd_log.h, cli/cmd_stimulus.h, cli/command.cc, 
	cli/command.h, cli/expr.cc, cli/expr.h, cli/parse.yy,cli/scan.ll:
	The 'break' and 'log' commands now accept expressions
	
2004-06-24 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, plat/win32/fd2raw.h: functions to set the WIN32
	  console to raw mode.
	* cli/input.cc: call functions to set WIN32 console to raw mode
	* gui/gui.vcproj: added fd2raw.cpp and fd2raw.h to the project
	* cli/cli.vcproj: added errors.cc and errors.h to the project

2004-06-23 Scott Dattalo <scott@dattalo.com>
	* cli/Makefile.am, cli/cmd_attach.cc, cli/cmd_attach.h, cli/cmd_bus.cc, cli/cmd_bus.h
	* cli/cmd_clear.cc, cli/cmd_clear.h, cli/cmd_disasm.cc, cli/cmd_disasm.h, 
	* cli/cmd_frequency.cc, cli/cmd_frequency.h, cli/cmd_node.cc, cli/cmd_node.h,
	* cli/cmd_set.cc, cli/cmd_set.h, cli/cmd_step.cc, cli/cmd_step.h, 