@@ -1,3 +1,7 @@
+2004-06-30 Scott Dattalo <scott@dattalo.com>
+	* gpsim/main.cc, cli/input.cc:
+	Starting gpsim in cli only mode would cause a crash.
+	
 2004-06-30 Borut Razem <borut.razem@siol.net>
 	* plat/win32/gpsim.def: small fix for MSVC compilation
 
